Drop down box path

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                                 <!-- <a class="dropdown-item" href="/Projects/MCG_Hand/">MCG Hand</a> -->
                                 <!-- <a class="dropdown-item" href="/Projects/L-PASA-W_Hand/">L-PASA-W Hand</a> -->
 
-                                <a class="dropdown-item" href="#project-model-q-2">Model Q-II</a>
-                                <a class="dropdown-item" href="#project-COSA-DOB-hand">COSA-DOB Hand</a>
+                                <a class="dropdown-item" href="/#project-model-q-2">Model Q-II</a>
+                                <a class="dropdown-item" href="/#project-COSA-DOB-hand">COSA-DOB Hand</a>
                                 <!-- <a class="dropdown-item" href="#project-impedance-control">Impedance Control</a> -->
-                                <a class="dropdown-item" href="#project-parameter-identification">Parameter Identification</a>
-                                <a class="dropdown-item" href="#project--ball-kicking">Ball Kicking</a>
-                                <a class="dropdown-item" href="#project-MCG-hand">MCG Hand</a>
-                                <a class="dropdown-item" href="#project-L-PASA-W-hand">L-PASA-W Hand</a>
+                                <a class="dropdown-item" href="/#project-parameter-identification">Parameter Identification</a>
+                                <a class="dropdown-item" href="/#project--ball-kicking">Ball Kicking</a>
+                                <a class="dropdown-item" href="/#project-MCG-hand">MCG Hand</a>
+                                <a class="dropdown-item" href="/#project-L-PASA-W-hand">L-PASA-W Hand</a>
 
                             </div>
                         </li>
