--- a/Projects/Impedance_Control/index.html
+++ b/Projects/Impedance_Control/index.html
@@ -513,10 +513,10 @@
 
                 <p>
                     \({{\bf{F}}_{in}} = {\bf{F}}_{in}^\prime  + {\bf{F}}_{in}^*\)<br>
-                    \({\bf{F}}_{in}^* = {\bm \Lambda }({\bf{q}})\{  - {{\bf{b}}^*} - {\bf{\dot J}}\left( {\bf{q}} \right){\bf{\dot q}}\}\)<br>
+                    \({\bf{F}}_{in}^* = {\boldsymbol \Lambda }({\bf{q}})\{  - {{\bf{b}}^*} - {\bf{\dot J}}\left( {\bf{q}} \right){\bf{\dot q}}\}\)<br>
                     \(\boldsymbol{\Lambda}\bf(q) = (J(q) M^{-1}(q) J(q)^{T})^{-1}\)<br>
                     \({{\bf{b}}^*} =  - {\bf{J}}\left( {\bf{q}} \right){{\bf{M}}^{ - 1}}({\bf{q}}){\bf{C}}({\bf{q}},{\bf{\dot q}}){\bf{\dot q}} - {\bf{J}}\left( {\bf{q}} \right){{\bf{M}}^{ - 1}}({\bf{q}}){\bf{g}}({\bf{q}})\)<br>
-                    \({\bf{F}}_{in}^\prime = {\bm \Lambda }({\bf{q}})\{ {{{\bf{\ddot p}}}_0} + {\bf{K}_o}\left( {{{\bf{p}}_0} - {\bf{p}}} \right) + {\bf{B}}_o\left( {{{{\bf{\dot p}}}_0} - {\bf{\dot p}}} \right)\}\)
+                    \({\bf{F}}_{in}^\prime = {\boldsymbol \Lambda }({\bf{q}})\{ {{{\bf{\ddot p}}}_0} + {\bf{K}_o}\left( {{{\bf{p}}_0} - {\bf{p}}} \right) + {\bf{B}}_o\left( {{{{\bf{\dot p}}}_0} - {\bf{\dot p}}} \right)\}\)
                 </p>
     
                 <p>
